# pytest_proj

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_arr.py
utils/: arrs.py
